--- a/src/app/editar-producto/editar-producto.html
+++ b/src/app/editar-producto/editar-producto.html
@@ -11,7 +11,7 @@
         <div class="mb-3">
             <label for="precio" class="form-label">Precio</label>
             <input type="number" step="any" class="form-control" id="precio" name="precio"
-            [(ngModel)]="producto.precio">
+           [(ngModel)]="producto.precio">
         </div>
         <div class="mb-3">
             <label for="existencia" class="form-label">Existencia</label>
@@ -19,7 +19,7 @@
             [(ngModel)]="producto.existencia">
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-warning btn-sm me-3">Agregar</button>
+            <button type="submit" class="btn btn-warning btn-sm me-3">Guardar</button>
             <a href="/" class="btn btn-danger btn-sm">Regresar</a>
         </div>        
     </form>
