--- a/src/app/producto-lista/producto-lista.html
+++ b/src/app/producto-lista/producto-lista.html
@@ -9,6 +9,7 @@
                 <th scope="col">Descripción del producto</th>
                 <th scope="col">Precio</th>
                 <th scope="col">Existencias</th>
+                <th scope="col" class="text-center">Accioness</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,16 @@
                 <td>{{producto?.descripcion}}</td>
                 <td>{{producto?.precio}}</td>
                 <td>{{producto?.existencia}}</td>
+                <td class="text-center">
+                    <div>
+                        <button (click)="editarProducto(producto.idProducto)" class="btn btn-warning btn-sm me-3">
+                            Editar
+                        </button>
+                        <button (click)="eliminarProducto(producto.idProducto)" class="btn btn-danger btn-sm">
+                            Eliminar
+                        </button>
+                    </div>
+                </td>
             </tr>
             }
         </tbody>
